force-app/main/default/objects/Supplier_Evaluation__c/Supplier_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Supplier Evaluation</label>
    <nameField>
        <displayFormat>EVAL-{00000}</displayFormat>
        <label>Supplier Evaluation Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>