force-app/main/default/objects/Supplier_Evaluation__c/fields/Ability_to_Reach_Target_Price__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Reach_Target_Price__c</fullName>
    <label>Ability to Reach Target Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>