force-app/main/default/objects/Supplier_Evaluation__c/fields/Business_Problem_Resolving_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Business_Problem_Resolving_Capabilities__c</fullName>
    <label>Business Problem Resolving Capabilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>