force-app/main/default/objects/Supplier_Evaluation__c/fields/Capacity_Available__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Available__c</fullName>
    <label>Capacity Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>