force-app/main/default/objects/Supplier_Evaluation__c/fields/Capacity_Comments__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Comments__c</fullName>
    <label>Capacity Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>