force-app/main/default/objects/Supplier_Evaluation__c/fields/Change_Deviation_Management_System__c.field-meta.xml
<CustomField>
    <fullName>Change_Deviation_Management_System__c</fullName>
    <label>Change &amp; Deviation Management System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>