force-app/main/default/objects/Supplier_Evaluation__c/fields/Containment_Prevention__c.field-meta.xml
<CustomField>
    <fullName>Containment_Prevention__c</fullName>
    <label>Containment Prevention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>