force-app/main/default/objects/Supplier_Evaluation__c/fields/Control_Systems__c.field-meta.xml
<CustomField>
    <fullName>Control_Systems__c</fullName>
    <label>Control Systems</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>