force-app/main/default/objects/Supplier_Evaluation__c/fields/Development_Capability__c.field-meta.xml
<CustomField>
    <fullName>Development_Capability__c</fullName>
    <label>Development Capability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>