force-app/main/default/objects/Supplier_Evaluation__c/fields/Document_Standards__c.field-meta.xml
<CustomField>
    <fullName>Document_Standards__c</fullName>
    <label>Document Standards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>