force-app/main/default/objects/Supplier_Evaluation__c/fields/Ease_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Communication__c</fullName>
    <label>Ease of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>