force-app/main/default/objects/Supplier_Evaluation__c/fields/End_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Evaluation_Date__c</fullName>
    <label>End Evaluation Date</label>
    <type>Date</type>
</CustomField>