force-app/main/default/objects/Supplier_Evaluation__c/fields/Equipment_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Calibration__c</fullName>
    <label>Equipment Calibration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>