force-app/main/default/objects/Supplier_Evaluation__c/fields/Evaluation_Method__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Method__c</fullName>
    <label>Evaluation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>