force-app/main/default/objects/Supplier_Evaluation__c/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assurance of Supply</fullName>
            </value>
            <value>
                <fullName>Quality and Regulation Compliance</fullName>
            </value>
            <value>
                <fullName>Procurement and Cost</fullName>
            </value>
            <value>
                <fullName>Innovation/Technical</fullName>
            </value>
            <value>
                <fullName>Responsiveness/Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>