force-app/main/default/objects/Supplier_Evaluation__c/fields/Financial_Solvency_Business_Stability__c.field-meta.xml
<CustomField>
    <fullName>Financial_Solvency_Business_Stability__c</fullName>
    <label>Financial Solvency/Business Stability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>