force-app/main/default/objects/Supplier_Evaluation__c/fields/Financial_Stability_Comments__c.field-meta.xml
<CustomField>
    <fullName>Financial_Stability_Comments__c</fullName>
    <label>Financial Stability Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>