force-app/main/default/objects/Supplier_Evaluation__c/fields/Flexibility__c.field-meta.xml
<CustomField>
    <fullName>Flexibility__c</fullName>
    <label>Flexibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>