force-app/main/default/objects/Supplier_Evaluation__c/fields/Functional_Contacts_Definition__c.field-meta.xml
<CustomField>
    <fullName>Functional_Contacts_Definition__c</fullName>
    <label>Functional Contacts Definition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>