force-app/main/default/objects/Supplier_Evaluation__c/fields/GMP_Compliance_Regulatory_Track_Record__c.field-meta.xml
<CustomField>
    <fullName>GMP_Compliance_Regulatory_Track_Record__c</fullName>
    <label>GMP Compliance &amp; Regulatory Track Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>