force-app/main/default/objects/Supplier_Evaluation__c/fields/Health_Environment_Risk__c.field-meta.xml
<CustomField>
    <fullName>Health_Environment_Risk__c</fullName>
    <label>Health/Environment Risk</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bio</fullName>
            </value>
            <value>
                <fullName>Pest</fullName>
            </value>
            <value>
                <fullName>General Cleanliness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>