force-app/main/default/objects/Supplier_Evaluation__c/fields/Health_Environment_Risk_Comments__c.field-meta.xml
<CustomField>
    <fullName>Health_Environment_Risk_Comments__c</fullName>
    <label>Health/Environment Risk Comments</label>
    <type>TextArea</type>
</CustomField>