force-app/main/default/objects/Supplier_Evaluation__c/fields/Intellectual_Property__c.field-meta.xml
<CustomField>
    <fullName>Intellectual_Property__c</fullName>
    <label>Intellectual Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>