force-app/main/default/objects/Supplier_Evaluation__c/fields/Laboratory_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Capabilities__c</fullName>
    <label>Laboratory Capabilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>