force-app/main/default/objects/Supplier_Evaluation__c/fields/Materials_Management_Controls__c.field-meta.xml
<CustomField>
    <fullName>Materials_Management_Controls__c</fullName>
    <label>Materials Management Controls</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>