force-app/main/default/objects/Supplier_Evaluation__c/fields/Openness__c.field-meta.xml
<CustomField>
    <fullName>Openness__c</fullName>
    <label>Openness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>