force-app/main/default/objects/Supplier_Evaluation__c/fields/Overall_Evaluation_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Evaluation_Score__c</fullName>
    <label>Overall Evaluation Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>