force-app/main/default/objects/Supplier_Evaluation__c/fields/Presence_in_Low_Cost_Countries__c.field-meta.xml
<CustomField>
    <fullName>Presence_in_Low_Cost_Countries__c</fullName>
    <label>Presence in Low Cost Countries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>