force-app/main/default/objects/Supplier_Evaluation__c/fields/Pro_Activeness__c.field-meta.xml
<CustomField>
    <fullName>Pro_Activeness__c</fullName>
    <label>Pro-Activeness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>