force-app/main/default/objects/Supplier_Evaluation__c/fields/Process_Validation_Approach__c.field-meta.xml
<CustomField>
    <fullName>Process_Validation_Approach__c</fullName>
    <label>Process Validation Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>