force-app/main/default/objects/Supplier_Evaluation__c/fields/Product_Quality_Review__c.field-meta.xml
<CustomField>
    <fullName>Product_Quality_Review__c</fullName>
    <label>Product Quality Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>