force-app/main/default/objects/Supplier_Evaluation__c/fields/Production_Facilities_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Production_Facilities_Equipment__c</fullName>
    <label>Production Facilities/Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>