force-app/main/default/objects/Supplier_Evaluation__c/fields/Project_Management__c.field-meta.xml
<CustomField>
    <fullName>Project_Management__c</fullName>
    <label>Project Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>