force-app/main/default/objects/Supplier_Evaluation__c/fields/QOTIF_Quality_On_Time_in_Full__c.field-meta.xml
<CustomField>
    <fullName>QOTIF_Quality_On_Time_in_Full__c</fullName>
    <label>QOTIF% (Quality On Time in Full)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>