force-app/main/default/objects/Supplier_Evaluation__c/fields/Quality_Management_System__c.field-meta.xml
<CustomField>
    <fullName>Quality_Management_System__c</fullName>
    <label>Quality Management System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>