force-app/main/default/objects/Supplier_Evaluation__c/fields/Rapid_Project_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Rapid_Project_Assessment__c</fullName>
    <label>Rapid Project Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>