force-app/main/default/objects/Supplier_Evaluation__c/fields/REACH_Requirements_Comments__c.field-meta.xml
<CustomField>
    <fullName>REACH_Requirements_Comments__c</fullName>
    <label>REACH Requirements Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>