force-app/main/default/objects/Supplier_Evaluation__c/fields/REACH_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>REACH_Requirements_Met__c</fullName>
    <label>REACH Requirements Met?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>