force-app/main/default/objects/Supplier_Evaluation__c/fields/Recalls_and_Complaints__c.field-meta.xml
<CustomField>
    <fullName>Recalls_and_Complaints__c</fullName>
    <label>Recalls and Complaints</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>