force-app/main/default/objects/Supplier_Evaluation__c/fields/Supplier_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Agreement__c</fullName>
    <inlineHelpText>If yes, add as attachment.</inlineHelpText>
    <label>Supplier Agreement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>