force-app/main/default/objects/Supplier_Evaluation__c/fields/Supplier_Quality_Record__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Quality_Record__c</fullName>
    <label>Supplier Quality Record</label>
    <referenceTo>PDLM__Quality__c</referenceTo>
    <relationshipLabel>Supplier Evaluations</relationshipLabel>
    <relationshipName>Supplier_Evaluations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>