force-app/main/default/objects/Supplier_Evaluation__c/fields/Willingness_to_Innovate__c.field-meta.xml
<CustomField>
    <fullName>Willingness_to_Innovate__c</fullName>
    <label>Willingness to Innovate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ratings</valueSetName>
    </valueSet>
</CustomField>